[gd_scene load_steps=5 format=3 uid="uid://nq8tp1apdyry"]

[ext_resource type="Script" path="res://scenes/upgrades/LevelUpUi.gd" id="1_mhpqb"]
[ext_resource type="Theme" uid="uid://bxtdecgwlb77n" path="res://scenes/upgrades/theme_lvlup.tres" id="1_ua53q"]
[ext_resource type="LabelSettings" uid="uid://di2inmld2sx5d" path="res://scenes/fonts/title_font.tres" id="2_flh0q"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2bbot"]

[node name="LevelUpUi" type="Panel"]
process_mode = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -317.0
offset_top = -220.0
offset_right = 317.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_default_cursor_shape = 2
theme = ExtResource("1_ua53q")
theme_override_styles/panel = SubResource("StyleBoxTexture_2bbot")
script = ExtResource("1_mhpqb")

[node name="labelLvlUp" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 70.0
grow_horizontal = 2
text = "LEVEL UP!"
label_settings = ExtResource("2_flh0q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradesTable" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -316.0
offset_top = -232.0
offset_right = 316.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
